🎮 Add more slider controls

--- a/index.html
+++ b/index.html
@@ -165,6 +165,26 @@
 					Обслуживай
 				</button>
 			</div>
+
+			<div class="slider-controls">
+				<button
+					id="button-previous"
+					aria-controls="slide-1, slide-2, slide-3"
+					class="control-button"
+					type="button"
+					value="prev"
+					title="Предыдущий слайд"
+				>⟶</button>
+
+				<button
+					id="button-next"
+					aria-controls="slide-1, slide-2, slide-3"
+					class="control-button"
+					type="button"
+					value="next"
+					title="Следующий слайд"
+				>⟶</button>
+			</div>
 		</div>
 
 		<div class="static-image-wrapper">
