✊ Change arrow icons and aspect-ratio

--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
 					type="button"
 					value="prev"
 					title="Предыдущий слайд"
-				>⟶</button>
+				>
+					<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none">
+						<path fill="#fff" d="M3 16c0-.6.4-1 1-1h24a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Z"/>
+						<path fill="#fff" d="M19.3 7.3a1 1 0 0 1 1.4 0l8 8c.4.4.4 1 0 1.4l-8 8a1 1 0 0 1-1.4-1.4l7.3-7.3-7.3-7.3a1 1 0 0 1 0-1.4Z"/>
+					</svg>
+				</button>
 
 				<button
 					id="button-next"
@@ -183,7 +188,12 @@
 					type="button"
 					value="next"
 					title="Следующий слайд"
-				>⟶</button>
+				>
+					<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none">
+						<path fill="#fff" d="M3 16c0-.6.4-1 1-1h24a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Z"/>
+						<path fill="#fff" d="M19.3 7.3a1 1 0 0 1 1.4 0l8 8c.4.4.4 1 0 1.4l-8 8a1 1 0 0 1-1.4-1.4l7.3-7.3-7.3-7.3a1 1 0 0 1 0-1.4Z"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 
